--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "machine-learning-alghoritms",
   "version": "1.0.0",
-  "main": "backpropagation.js",
+  "main": "RedeNeuralConvolucional.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,10 @@
     "url": "https://github.com/wmfsystem/machine-learning-alghoritms/issues"
   },
   "homepage": "https://github.com/wmfsystem/machine-learning-alghoritms#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "canvas": "^2.4.0",
+    "get-image-data": "^4.1.0",
+    "window": "^4.2.6"
+  }
 }
