--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "machine-learning-alghoritms",
   "version": "1.0.0",
-  "main": "RedeNeuralConvolucional.js",
+  "main": "mlpTest.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
